--- a/1lesson/Personalpage.html
+++ b/1lesson/Personalpage.html
@@ -27,7 +27,7 @@
             float: left;
         }
 
-        .menu {
+        .nav {
             position: fixed;
             left: 210px;
             top: 65px;
