--- a/1lessonV3.0/Autorization.html
+++ b/1lessonV3.0/Autorization.html
@@ -45,13 +45,13 @@
                     <form>
                         Логин:
                         <input type="text" name="firstname"/>
-                        <br/>
+                        <br/><br>
                         Пароль:
                         <input type="password" name="password"/>
-                        <br/>
+                        <br/><br>
                         <input type="checkbox" id="saved" name="save"/><label for="saved">Запомнить меня</label>
-                        <br/>
-                        <a href="#" class="a_demo_one">Нажми меня!</a>
+                        <br/><br>
+                        <a href="#" class="a_demo_one">Нажми меня!</a><br><br><br>
                     </form>
                 </div>
             </div>
