--- a/1lesson/Autorization.html
+++ b/1lesson/Autorization.html
@@ -24,7 +24,7 @@
 				float:left;
 			}
 			
-			.menu {
+			.nav {
 				position: fixed;
 				left: 210px; top: 65px; right: 5px;
 				height:20px;
