--- a/1lesson/Homepage.html
+++ b/1lesson/Homepage.html
@@ -25,7 +25,7 @@
 				float:left;
 			}
 			
-			.menu {
+			.nav {
 				position: fixed;
 				left: 210px; top: 65px; right: 5px;
 				height:20px;
