--- a/1lessonV3.0/Homepage.html
+++ b/1lessonV3.0/Homepage.html
@@ -28,7 +28,7 @@
 				<div class="sidebar_inner shadow">
 					<a class="sid_menu a_demo_one" href="Homepage.html">Домашняя страница</a><br>
 					<a class="sid_menu a_demo_one" href="Autorization.html">Авторизация</a><br>
-					<a class="sid_menu a_demo_one" href="Checkin.html">Регистрация</a>
+					<a class="sid_menu a_demo_one" href="Registration.html">Регистрация</a>
 				</div>
 			</div>
 
@@ -37,7 +37,7 @@
 					<div class="nav_inner">
 						<a class="nav_link" href="Homepage.html">Домашняя страница</a>
 						<a class="nav_link" href="Autorization.html">Авторизация</a>
-						<a class="nav_link" href="Checkin.html">Регистрация</a>
+						<a class="nav_link" href="Registration.html">Регистрация</a>
 					</div>
 				</div>
 
