--- a/homework2/calculatorofthecost/index.html
+++ b/homework2/calculatorofthecost/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Calculator of the cost</title>
-    <link rel="stylesheet" href="css/css.css">
-    <script type="text/javascript" src="scripts/myscript.js" defer></script>
+    <link rel="stylesheet" href="css/style.css">
+    <script type="text/javascript" src="scripts/script.js" defer></script>
 </head>
 <body>
     <h1>Калькулятор стоимости моего курса.</h1>
