--- a/homework1/1lesson/autorization.html
+++ b/homework1/1lesson/autorization.html
@@ -2,13 +2,12 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>Домашняя страница</title>
+		<title>Авторизация</title>
 		<style>
 		
 			.header {
 				position: fixed;
 				left: 0; top: 0;
-				padding: 5;
 				width: 100%;
 				height:60px;
 				background: #7fffd4;
@@ -58,26 +57,36 @@
 	
 	<body bgcolor = "yellow" >
 		<div class="header" align="center" >
-			<a href="Personalpage.html"><img src="images/logo.png" height="50px" align="left" hspace="5px" vspace="5px" /></a><h2>Левковец Сергей Андреевич</h2>
+			<a href="personalpage.html"><img src="images/logo.png" height="50px" align="left" hspace="5px" vspace="5px" /></a><h2>Левковец Сергей Андреевич</h2>
 		</div>
 		
 		<div class="sidebar">
 			<ul>
-				<li><a href="Homepage.html">Домашняя страница	</a><br></li>
-				<li><a href="Autorization.html">	Авторизация	</a><br></li>
-				<li><a href="Checkin.html">	Регистрация	</a><br></li>
+				<li><a href="homepage.html">Домашняя страница	</a><br></li>
+				<li><a href="autorization.html">	Авторизация	</a><br></li>
+				<li><a href="checkin.html">	Регистрация	</a><br></li>
 			</ul>
 		</div>
 		
 		<div class="menu" align="center">
-			<a href="Homepage.html">Домашняя страница</a> 
-			<a href="Autorization.html">Авторизация</a> 
-			<a href="Checkin.html">Регистрация</a>
+			<a href="homepage.html">Домашняя страница</a>
+			<a href="autorization.html">Авторизация</a>
+			<a href="checkin.html">Регистрация</a>
 		</div>
 		
 		<div class="content">
-			<img src="images/foto.jpg" align="left"><p><h3>Какой то текст, какая то информация. Какой то текст, какая то информация.
-			Какой то текст, какая то информация. Какой то текст, какая то информация. Какой то текст, какая то информация.</h3> </p>
+			<form>
+				<img src="images/logo.png">
+				Логин:
+				<input type="text" name="firstname"/>
+				<br/>
+				Пароль:
+				<input type="password" name="password" />
+				<br/>
+				<input type="checkbox" id="saved" name="save" /><label for="saved">Запомнить меня</label>
+				<br/>
+				<input type="submit" value="Войти" />
+			</form>
 		</div>
 		
 		<div class="footer" align="center">
