--- a/homework1/1lesson/homepage.html
+++ b/homework1/1lesson/homepage.html
@@ -58,21 +58,21 @@
 	
 	<body bgcolor = "yellow" >
 		<div class="header" align="center" >
-			<a href="Personalpage.html"><img src="images/logo.png" height="50px" align="left" hspace="5px" vspace="5px" /></a><h2>Левковец Сергей Андреевич</h2>
+			<a href="personalpage.html"><img src="images/logo.png" height="50px" align="left" hspace="5px" vspace="5px" /></a><h2>Левковец Сергей Андреевич</h2>
 		</div>
 		
 		<div class="sidebar">
 			<ul>
-				<li><a href="Homepage.html">Домашняя страница	</a><br></li>
-				<li><a href="Autorization.html">	Авторизация	</a><br></li>
-				<li><a href="Checkin.html">	Регистрация	</a><br></li>
+				<li><a href="homepage.html">Домашняя страница	</a><br></li>
+				<li><a href="autorization.html">	Авторизация	</a><br></li>
+				<li><a href="checkin.html">	Регистрация	</a><br></li>
 			</ul>
 		</div>
 		
 		<div class="menu" align="center">
-			<a href="Homepage.html">Домашняя страница</a> 
-			<a href="Autorization.html">Авторизация</a> 
-			<a href="Checkin.html">Регистрация</a>
+			<a href="homepage.html">Домашняя страница</a>
+			<a href="autorization.html">Авторизация</a>
+			<a href="checkin.html">Регистрация</a>
 		</div>
 		
 		<div class="content">
