--- a/homework1/1lessonV3.0/registration.html
+++ b/homework1/1lessonV3.0/registration.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<title>Авторизация</title>
-	<link rel="stylesheet" href="css/conf.css">
+	<link rel="stylesheet" href="css/style.css">
 	<link href="https://fonts.googleapis.com/css?family=Courgette|Lobster|Oswald&display=swap&subset=cyrillic" rel="stylesheet">
 </head>
 
@@ -13,7 +13,7 @@
 	<div class="header ">
 		<div class="heder_inner shadow">
 			<div class="icon">
-				<a href="Personalpage.html"><img class="icon_img" src="images/logo.png" /></a>
+				<a href="personalpage.html"><img class="icon_img" src="images/logo.png" /></a>
 			</div>
 
 			<div class="logo">
@@ -26,18 +26,18 @@
 
 		<div class="sidebar">
 			<div class="sidebar_inner shadow">
-				<a class="sid_menu a_demo_one" href="Homepage.html">Домашняя страница</a><br>
-				<a class="sid_menu a_demo_one" href="Autorization.html">Авторизация</a><br>
-				<a class="sid_menu a_demo_one" href="Registration.html">Регистрация</a>
+				<a class="sid_menu a_demo_one" href="homepage.html">Домашняя страница</a><br>
+				<a class="sid_menu a_demo_one" href="autorization.html">Авторизация</a><br>
+				<a class="sid_menu a_demo_one" href="registration.html">Регистрация</a>
 			</div>
 		</div>
 
 		<div class="content">
 			<div class="nav shadow">
 				<div class="nav_inner">
-					<a class="nav_link" href="Homepage.html">Домашняя страница</a>
-					<a class="nav_link" href="Autorization.html">Авторизация</a>
-					<a class="nav_link" href="Registration.html">Регистрация</a>
+					<a class="nav_link" href="homepage.html">Домашняя страница</a>
+					<a class="nav_link" href="autorization.html">Авторизация</a>
+					<a class="nav_link" href="registration.html">Регистрация</a>
 				</div>
 			</div>
 
