--- a/homework1/1lessonV3.0/registration.html
+++ b/homework1/1lessonV3.0/registration.html
@@ -103,10 +103,10 @@
 						<h3>Условия и рассылки</h3><br>
 						<input type="checkbox" id="submint" name="save"/><label for="submint">Я согласен с условиями</label>
 						<br/>
-						<input type="checkbox" id="submint" name="save"/><label for="submint">Я хочу получать персональные
+						<input type="checkbox" id="submin" name="save"/><label for="submin">Я хочу получать персональные
 						предложения на вашем сайте </label>
 						<br/>
-						<input type="checkbox" id="submint" name="save"/><label for="submint">Разрешение партнерам
+						<input type="checkbox" id="submi" name="save"/><label for="submi">Разрешение партнерам
 						на рассылку персонализированых<br>предложений и связаных с ним услуг</label>
 					</div>
 					<input class="a_demo_one" type="submit" value="Регистрация"/><br>
