--- a/homework3/electronicapplicationform/index.html
+++ b/homework3/electronicapplicationform/index.html
@@ -7,19 +7,97 @@
     <script type="text/javascript" src="scripts/script.js" defer></script>
 </head>
 <body>
-<h1>Калькулятор стоимости моего курса.</h1>
+<h1>Электронная анкета<br>для оценки качества образования.</h1>
 <form class="my_form" name="my_form" id="my_form">
-    Стоимость вышего курса:<br>
-    <input type="text" name="courseCost" id="courseCost" value="805"><br><br>
-    Количество занятий или общее количество часов:<br>
-    <input type="text" name="lessonsCount" id="lessonsCount" value="120"><br><br>
-    <label for="lesson">Введено количество занятий</label>
-    <input type="radio" id="lesson" name="count"/>
-    <label for="hours" style="margin-left: 20px">количество часов</label>
-    <input type="radio" id="hours" name="count" checked/><br/><br>
-    Количество часов в одном занятии<br>
-    <input type="text" name="hoursInLesson" id="hoursInLesson" value="3"><br><br>
-    <input type="button" id="calc" name="calc" value="Посчитать">
+    <div class="ferst size">
+        1. Фамилия*:<br>
+        <input type="text" name="last_name" id="last_name" pattern="^\S.*\S$" required><br><br>
+        2. Имя*:<br>
+        <input type="text" name="name" id="name" required><br><br>
+        3. Отчество:<br>
+        <input type="text" name="middle_name" id="middle_name" ><br><br>
+        4. Секретная Фраза*:<br>
+        <input type="password" name="password" id="password" required><br><br>
+    </div>
+    <div class="sex size">
+        5. Возраст:<br>
+        <input type="number" name="age" id="age" min="0" max="130"><br><br>
+        6. Пол*:<br>
+        <input type="radio"  id="male" name="sex" required/><label for="male">Мужской</label>
+        <input type="radio"  id="fomale" name="sex"required/><label for="fomale">Женский</label><br/><br>
+    </div>
+    <div class="courses size">
+        7. Курс*:<br>
+        <select name="course" id="course" required>
+            <option></option>
+            <option value="java_se">Java SE</option>
+            <option value="java_ee">Java EE</option>
+            <option value="python">Python/Django</option>
+            <option value="html_css">HTML и CSS</option>
+            <option value="javascript">JavaScript (Angular)</option>
+            <option value="php_sql">PHP, MySQL, Laravel</option>
+            <option value="tester">Тестирование</option>
+        </select><br><br>
+        8. Преподаватель*:<br>
+        <select name="teacher" id="teacher" required>
+            <option></option>
+            <option value="ivanov">Иванов Иван Иванович</option>
+            <option value="petrov">Петров Петр Петрович</option>
+            <option value="sidorov">Сидоров Сидор Сидорович</option>
+        </select><br><br>
+        9. Оценка курса*:<br>
+        <select name="Assessment" id="assessment" required>
+            <option></option>
+            <option value="one">1</option>
+            <option value="two">2</option>
+            <option value="three">3</option>
+            <option value="four">4</option>
+            <option value="five">5</option>
+        </select><br><br>
+        10. Прочие курсы*:<br>
+        <select name="other_course" id="other_course" multiple="multiple" required
+                title="Выбирете несколько вариантов
+                при помощи Ctrl">
+            <option value="java_se">Java SE</option>
+            <option value="java_ee">Java EE</option>
+            <option value="python">Python/Django</option>
+            <option value="html_css">HTML и CSS</option>
+            <option value="javascript">JavaScript (Angular)</option>
+            <option value="php_sql">PHP, MySQL, Laravel</option>
+            <option value="tester">Тестирование</option>
+        </select><br><br>
+    </div>
+    <div class="other">
+        <div class="sources">
+            11. Как Вы о нас узнали*:<br>
+            <div class="left">
+                <input type="checkbox" id="tv" name="sources" required/><label for="tv">Реклама по ТВ.</label><br>
+                <input type="checkbox" id="radio" name="sources"/><label for="radio">Реклама по радио.</label><br>
+                <input type="checkbox" id="inet" name="sources"/><label for="inet">Реклама в Интернете.</label>
+            </div>
+
+            <div class="right">
+                <input type="checkbox" id="metro" name="sources"/><label for="metro">Реклама в метро.</label><br>
+                <input type="checkbox" id="friends" name="sources"/><label for="friends">От знакомых</label><br>
+                <input type="checkbox" id="other" name="sources"/><label for="other">Другое</label>
+            </div>
+        </div>
+
+        <div class="other">
+            12. Другое
+            <pre class="mark" hidden>*</pre>
+            :<br>
+            <textarea name="other" id="other_text" rows="3" cols="30"></textarea><br><br>
+            13. Прочие Рекомендации:<br>
+            <textarea name="recommendations" id="recommendations" rows="3" cols="30"></textarea><br><br>
+        </div>
+    </div>
+
+    <div class="button">
+        <input type="submit" id="thrue_answer" name="true_answer" value="Отправить – здесь все правда">
+        <input type="hidden" id="false_answer" name="false_answer" value="Отправить – я все равно все наврал">
+    </div>
+
 </form>
 <div class="result">
     <div class="inner_result" id="inner_result"></div>
