--- a/homework3-1/electronic-app-form-servlet/web/index.html
+++ b/homework3-1/electronic-app-form-servlet/web/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>Электронная анкета<br>для оценки качества образования.</h1>
+
     <form class="my_form" name="my_form" id="my_form" method="get" action="/myservlet.html">
         <div class="ferst size">
             1. Фамилия*:<br>
@@ -107,3 +108,7 @@
 
 </body>
 </html>
+
+
+    <tr><td>name</td><td>SALev</td></tr>
+    <tr><td>middle_name</td><td>fasfas</td></tr>
