--- a/homework3-1/electronic-app-form-servlet/web/index.html
+++ b/homework3-1/electronic-app-form-servlet/web/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>Calculator of the cost</title>
+    <title>Electronic application form servlet</title>
     <link rel="stylesheet" href="css/style.css">
     <script type="text/javascript" src="scripts/script.js" defer></script>
 </head>
@@ -110,5 +110,3 @@
 </html>
 
 
-    <tr><td>name</td><td>SALev</td></tr>
-    <tr><td>middle_name</td><td>fasfas</td></tr>
