--- a/homework3-2/electronic-app-form-servlet/web/no-index.html
+++ b/homework3-2/electronic-app-form-servlet/web/no-index.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Электронная анкета<br>для оценки качества образования.</h1>
 
-    <form class="my_form" name="my_form" id="my_form" method="get" action="/myservlet.html">
+    <form class="my_form" name="my_form" id="my_form" method="get" action="/result-servlet.html">
         <div class="first size">
             1. Фамилия*:<br>
             <input type="text" name="last_name" id="last_name"/><br><br>
